[gd_scene load_steps=6 format=3 uid="uid://d24bjoiviva4"]

[ext_resource type="PackedScene" uid="uid://quw2up5lw5w5" path="res://kenny-car-kit/suv.glb" id="1_1a65k"]
[ext_resource type="Script" path="res://car_example.gd" id="1_8husl"]
[ext_resource type="AudioStream" uid="uid://by3qx4wg20d4j" path="res://audio/engine.wav" id="3_5bi44"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kc6ci"]
bounce = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_jpm7l"]
radius = 1.0

[node name="CarExample" type="Node3D"]
script = ExtResource("1_8husl")

[node name="Ball" type="RigidBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_kc6ci")
gravity_scale = 10.0
angular_damp = 5.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
shape = SubResource("SphereShape3D_jpm7l")

[node name="CarMesh" parent="." instance=ExtResource("1_1a65k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CameraPivot" type="Node3D" parent="CarMesh"]
transform = Transform3D(1, 0, 0, 0, 0.884621, -0.46631, 0, 0.46631, 0.884621, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="CarMesh/CameraPivot"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -8)
fov = 70.0
size = 10.0

[node name="GroundRay" type="RayCast3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_5bi44")
autoplay = true
playback_type = 1

[node name="AudioListener3D" type="AudioListener3D" parent="."]
